# sqpnl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp  main_plain.cpp
sqpnl/: CMakeLists.txt  sqpnl.cpp  sqpnl.h  types.h
